ldms: manpage update due to ldms_auth
Update various manpages affected by the new `ldms_auth`.

--- a/ldms/man/ldms_authentication.man
+++ b/ldms/man/ldms_authentication.man
@@ -1,55 +1,63 @@
 .\" Manpage for ldms_authentication
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "22 Dec 2016" "v3.3" "LDMS Authentication man page"
+.TH man 7 "28 Feb 2018" "v4" "LDMS Authentication man page"
 
 .SH NAME
-ldms_authentication \- Authentication in LDMS
+ldms_authentication \- Authentication in LDMS transports
 
 .SH DESCRIPTION
-Ldmsd servers require clients including other ldmsd (aggregators), ldms_ls, and ldmsd_controller (if connecting remotely rather than via UNIX socket), to prove they share a secret with the server. The secret is a text file containing the line
+LDMS applications use authentication plugins in LDMS transports to
+authenticate the peers. In other words, not only \fBldmsd\fR authenticates
+the client connections, the clients
+.RB ( ldms_ls ,
+.BR ldmsctl ,
+.BR ldmsd_controller ,
+and other
+.BR ldmsd )
+authenticate the
+.B ldmsd
+too.
+
+.BR ldmsd ,
+.BR ldms_ls ,
+.BR ldmsd_controller ", and"
+.B ldmsctl
+use the following options for authentication purpose:
+.TP
+.BI \-a " AUTH_PLUGIN"
+Specifying the name of the authentication plugin. The default is "none" (no
+authentication).
+.TP
+.BI \-A  " NAME" = "VALUE"
+Specifying options to the authentication plugin. This option can be given
+multiple times.
+
 .PP
-.RS
-       secretword=X
-.RE
-.PP
-where X is a string at least 5 characters long. Lines starting with # in the file are ignored.
-.PP
-Four locations are checked in order for the secret:
-.RS
-.TP
-1) the full file path given on the command line via "-a authfile".
-.TP
-2) the full file path given in environment variable LDMS_AUTH_FILE.
-.TP
-3) $HOME/.ldmsauth.conf
-.TP
-4) $SYSCONFDIR/ldmsauth.conf (e.g. /etc/ldmsauth.conf)
-.RE
+Please consult the manual of the plugin for more details.
 
-where $HOME is taken from
-.I /etc/password
-and $SYSCONFDIR is determined at ldms compile time. If one of these is not set, the search continues with the next location.
-A failure in reading one, if the file exists, ends the search and is a failure to authenticate.
 
-The secret file permissions must be set to 600 or more restrictive.
+.SH LIST OF LDMS_AUTH PLUGINS
 
-.SH ENVIRONMENT
-LDMS_AUTH_FILE is a full file path for a secretword file. It is not necessary, if the file is in one of the other checked locations.
-
-.SH NOTES
-.IP
-If you want to use the ldmsd_controller to configure a remote host AND you are using authentication,
-then you must build ldms with --enable-swig.
-.IP
-Authentication can be disabled at ldms build time by configuring your ldms build with --disable-ovis_auth. Then no
-secretword file is required or checked.
-
-.SH BUGS
 .TP
-Networked file system users should verify the privacy of their secret files, as various access control list schemes might be more permissive than the standard permissions bits.
+.B ovis
+The shared secret authentication using ovis_lib
+.RB "(see " ldms_auth_ovis (7)).
+
 .TP
-Ldms_rctrl uses environment variable LDMSD_RCTRL_AUTH_FILE instead of LDMS_AUTH_FILE. Ldms_rctrl does not recognize $HOME/.ldmsauth.conf or /etc/ldmsauth.conf. Both will be repaired in the a future release.
+.B naive
+The naive authentication for testing.
+.RB "(see " ldms_auth_naive (7)).
+
+.TP
+.B munge
+User credential authentication using Munge (will be available soon).
 
 .SH SEE ALSO
-ldmsctl(8), ldmsd(8), ldms_ls(8), ldmsd_controller(8), ldms_quickstart(7), ldms_build_install(7)
-
+.BR ldms_auth_ovis (7),
+.BR ldms_auth_naive (7),
+.BR ldmsctl (8),
+.BR ldmsd (8),
+.BR ldms_ls (8),
+.BR ldmsd_controller (8),
+.BR ldms_quickstart (7),
+.BR ldms_build_install (7)
