Cleaned up and extended ldms_plugins_list.sh for v4.
ldmsd -u becomes ldmsd -u <name>
name is a plugin name or one of all, sampler, store special names.
Added a man page for ldms-plugins and updated ldmsd.man which was
missing -u option.

--- a/ldms/man/ldmsd.man
+++ b/ldms/man/ldmsd.man
@@ -108,6 +108,9 @@ If ldms is configured with --disable-ovis_auth, the -a option disappears and wil
 .TP
 .BR -V
 Display LDMS version information and then exit.
+.TP
+.BR -u " plugin_name"
+Display the usage for named plugin. Special names all, sampler, and store match all, sampler type, and store type plugins, respectively.
 
 
 
