--- a/ldms/man/Plugin_lustre2_client.man
+++ b/ldms/man/Plugin_lustre2_client.man
@@ -14,50 +14,32 @@ ldmsctl> config name=lustre2_client [ <attr> = <value> ]
 The lustre2_client plugin provides Lustre metric information.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
+This plugin uses the sampler_base base class. This man page covers only the
+configuration attributes, or those with default values, specific to the this
+plugin; see \fBldms_sampler_base\fR(7) for the attributes of the base class.
 
 .TP
-.BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [schema=<sname>] [component_id=<compid> with_jobid=<bool>] osc=<osc> mcd=<mcd> llite=<llite>
-.br
-configuration line
+.BI config " " name "=<plugin_name> " \
+    "<SAMPLER_BASE_OPTIONS> osc" "=<CSV> " mdc "=<CSV> " llite =<CSV>
+
+.PP
+Descriptions:
 .RS
 .TP
-name=<plugin_name>
-.br
+.BI name =<plugin_name>
 This MUST be lustre2_client.
 .TP
-producer=<pname>
-.br
-The producer string value.
+.B <SAMPLER_BASE_OPTIONS>
+Please see \fBldms_sampler_base\fR(7) for sampler_base options.
 .TP
-instance=<set_name>
-.br
-The name of the metric set.
+.BI osc =<CSV>
+CSV list of OSC's.
 .TP
-schema=<schema>
-.br
-Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
-different schema. If not specified, will default to `lustre2_client`.
+.BI mdc =<CSV>
+CSV list of MDC's.
 .TP
-with_jobid=<bool>
-.br
-1 to include jobid with set or 0 if not.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-osc=<osc>
-.br
-CSV list of osc's.
-.TP
-mcd=<mcd>
-.br
-CSV list of mcd's.
-.TP
-llite=<llite>
-.br
-CSV list of llites.
+.BI llite =<CSV>
+CSV list of LLITE's.
 
 .PP
 For oscs,mdcs and llites: if not specified, NONE of the
@@ -84,4 +66,5 @@ ldmsctl> quit
 .fi
 
 .SH SEE ALSO
-ldmsd(8), ldms_quickstart(7), ldmsd_controller(8)
+.BR ldms_sampler_base "(7), " ldmsd "(8), " ldms_quickstart "(7), "
+.BR ldmsd_controller (8)
