--- a/ldms/man/Plugin_procstat.man
+++ b/ldms/man/Plugin_procstat.man
@@ -20,37 +20,13 @@ Cores not actually appearing will be reported as 0 values.
 
 .SH CONFIGURATION ATTRIBUTE SYNTAX
 
+See ldms_sampler_base(7) for the common sampler options.
 .TP
 .BR config
-name=<plugin_name> producer=<pname> instance=<set_name> [component_id=<compid> schema=<sname>] [with_jobid=<bool>]
+maxcpu=<core_count> <standard options>
 .br
 configuration line
 .RS
-.TP
-name=<plugin_name>
-.br
-This MUST be procstat.
-.TP
-producer=<pname>
-.br
-The producer name value.
-.TP
-instance=<set_name>
-.br
-The name of the metric set.
-.TP
-schema=<schema>
-.br
-Optional schema name. It is intended that the same sampler on different nodes with different metrics have a
-different schema. If not specified, will default to `procstat`.
-.TP
-component_id=<compid>
-.br
-Optional component identifier. Defaults to zero.
-.TP
-with_jobid=<bool>
-.br
-Option to collect jobid with set or 0 if not.
 .TP
 maxcpu=<core count>
 .br
@@ -58,7 +34,7 @@ Values are 0 to N, where 0 logs only totalized data and N reserves slots for N c
 .RE
 
 .SH DATA
-This reports both interrupt count and time processing them. For detailed interrupt data by type, another plugin that reads /proc/interrupts must be created.
+This reports both interrupt count and time processing them. For detailed interrupt data by type, consider Plugin_procinterrupts(7).
 
 .SH BUGS
 Reporting all interrupts by name is not implemented.
@@ -73,4 +49,5 @@ start name=procstat interval=1000000 offset=0
 .fi
 
 .SH SEE ALSO
+ldms_sampler_base(7), Plugin_procinterrupts(7),
 Kernel source fs/proc/stat.c and proc(5), ldmsd(8), ldmsd_controller(8)
