--- a/ldms/man/ldmsd.man
+++ b/ldms/man/ldmsd.man
@@ -93,6 +93,9 @@ For example, 20M or 20mb are 20 megabytes. The default is adequate for most ldms
 For aggregating ldmsd, a rough estimate of preallocated memory needed is (Number of nodes aggregated) x (Number of metric sets per node) x 4k.
 Data sets containing arrays may require more. The estimate can be checked by enabling DEBUG logging and examining the mm_stat bytes_used+holes value at ldmsd exit.
 .TP
+.BI -n " NAME"
+The name of the daemon. By default, it is "\fIHOSTNAME:PORT\fR".
+.TP
 .BI -r " pid_file"
 The path to the pid file and prefix of the .version banner file for daemon mode.
 .TP
