Fixes for launch script production issues
Hostnumber computed now strips leading zeros to prevent octal arithmetic errors.

Attributes ldmsd_id and ldmsd_idsuffix provided to override guessing component_id from hostnumber.

Extended %d genders name split to %D (split with strip leading zeros).
This should enable saner cray usages.

Give precedence to env vars VGBIN,VGOPT over genders ldmsd_vg and ldmsd_vgargfile.

Example of coherent systemd multicluster config setting management.

Check for ldms attribute lines missing hostnames.

Apply schema name override (if present) to instance name in sampler configuration.

Update man pages per the above.
Example of using schema name in sampler included in man page.

--- a/util/sample_init_scripts/genders/man/ldmsd-genders.man
+++ b/util/sample_init_scripts/genders/man/ldmsd-genders.man
@@ -198,7 +198,18 @@ If defined, this overrides the ldmsd_store_plugins gender.
 If set, overrides gender ldmsd_interval_default used to control sampling rate.
 
 .B LDMSD_OFFSET_DEFAULT=DT
+
 If set, overrides gender ldmsd_interval_default used to control sampling rate.
+
+.B VGBIN=/usr/bin/valgrind
+
+If set, overrides gender ldmsd_vg defining the wrapper tool location. Must be a full path.
+May be any wrapper tool, not just valgrind.
+
+.B VGOPT="argument list"
+
+If set, overrides argument data pointed to in gender ldmsd_vgargfile.
+Ignored if VGBIN and gender ldmsd_vg are both undefined.
 
 .PP
 
@@ -213,6 +224,9 @@ Home of the ldmsd configuration processing scripts: ldmsd, ldms-functions.
 .TP
 .I /etc/sysconfig/ldms.d/ldmsd.local.conf
 Environment variables and override settings for monitoring the local host.
+.TP
+.I /etc/sysconfig/ldms.d/ldmsd.all_instances.conf
+Optional environment variables and override settings for multiple hosts.
 .TP
 .I /etc/sysconfig/ldms.d/plugins-conf
 Plugin configuration text fragments, configuration text generation programs, or
