--- a/util/sample_init_scripts/genders/man/ldms-attributes.man
+++ b/util/sample_init_scripts/genders/man/ldms-attributes.man
@@ -42,14 +42,21 @@ ldmsd_use_inet_socket=V If the value V is "yes", an INET socket for
 ldmsd_config_port=R     Defines the port number R of the INET socket. If
                         not present and INET socket is used, defaults to
                         410.
+ldmsd_id=EX             Define per-node component_id. EX is an expression per
+                        "Attribute value substitution with node name 
+                        fragments" below. The result must be decimal.
+                        Overrides ldmsd_idbase and ldmsd_idsuffix.
 ldmsd_idbase=IDMIN      Defines the least component_id for a node type.
                         For a class of node names differing only in an
                         integer ISUFFIX, component_id is IDMIN+ISUFFIX.
-                        component_id of 0 is reserved;
-                        ensure IDMIN+ISUFFIX>0.
+                        component_id of 0 is reserved; ensure IDMIN+ISUFFIX>0.
                         Overrideable with the LDMSD_IDBASE environment
                         variable, which is not recommended except for
-                        debugging.
+                        debugging. Overrideable with ldmsd_id.
+ldmsd_idsuffix=EX       Define per-node component_id ISUFFIX. EX is an
+                        expression per "Attribute value substitution with
+                        node name fragments" below. The result is added to
+                        IDMIN. If not defined, the equivalent of %0D is used.
 ldmsd_dbg=LEVEL         Defines the daemon binary's logging level, with
                         values as defined in ldmsd(8) and NONE,
                         which routes all logging to /dev/null.
@@ -128,6 +135,8 @@ ldmsd_config_gen_SUFFIX=PROG    Defines SUFFIX plugin config file
 # For example:
 ldmsd_procnetdev=PARAMLIST      Defines config flags of procnetdev.
 ldmsd_sysclassib=PARAMLIST      Defines config flags of sysclassib.
+ldmsd_meminfo=schema/gw_meminfo Defines meminfo while overriding the schema name.
+                                Schema renaming can prevent conflicts at csv stores.
 ldmsd_config_text_meminfo=yes   Appends /etc/sysconfig/ldms.d/plugins-conf/meminfo
                                 to the standard plugin startup line.
 ldmsd_config_gen_vmstat=yes     Runs /etc/sysconfig/ldms.d/plugins-conf/gen.vmstat
@@ -275,7 +284,7 @@ If nodes mon[1-4] are themselves to be monitored by montop, then they must have 
 .SH Attribute value substitution with node name fragments
 
 Libgenders supports replacing "%n" (unqualified node name) in attribute values.
-LDMS attribute processing extends this to include extraction and reuse of various node name fragments by position. This enables the collapse of certain voluminous attribute definitions into a single line. The additional substitutions supported are %N[d,m,u] which take the Nth fragment of the type indicated by d, m, or u from the node name. The fragment types d, m, u are, respectively, an integer segment embedded in the node name, a segment separated by the '-' character from other segments of the node name, and a segment separated by the '_' character from other segments. Note that the m and u segment types do not exclude digits within. Segments are numbered from 0.
+LDMS attribute processing extends this to include extraction and reuse of various node name fragments by position. This enables the collapse of certain voluminous attribute definitions into a single line. The additional substitutions supported are %N[d,D,m,u] which take the Nth fragment of the type indicated by d, D, m, or u from the node name. The fragment types d, D, m, u are, respectively, an integer segment embedded in the node name, an integer segment trimmed of leading zeroes, a segment separated by the '-' character from other segments of the node name, and a segment separated by the '_' character from other segments. Note that the m and u segment types do not exclude digits within. Segments are numbered from 0.
 
 For example the attribute definitions:
 .nf
