--- a/ldms/scripts/examples/rabbitkw.1
+++ b/ldms/scripts/examples/rabbitkw.1
@@ -9,7 +9,7 @@ updtr_prdcr_add name=allhosts regex=.*
 updtr_start name=allhosts
 
 load name=store_rabbitkw
-config name=store_rabbitkw useserver=y routing_key=ldms.$cluster host=localhost port=5672 exchange=amq.topic vhost=/ user=guest pwfile=${AUTHFILE} extraprops=y logmsg=n retry=3 timeout=2000
+config name=store_rabbitkw useserver=y routing_key=ldms.$cluster host=localhost port=5672 exchange=amq.topic vhost=/ user=guest pwfile=${AUTHFILE} extraprops=y logmsg=n retry=3 timeout=2000 heartbeat=1
 
 strgp_add name=rabbit_meminfo plugin=store_rabbitkw schema=meminfo policy=meminfo container=bigiron
 strgp_prdcr_add name=rabbit_meminfo regex=.*
