add heartbeat and increase default timeout

--- a/ldms/man/Plugin_store_rabbitkw.man
+++ b/ldms/man/Plugin_store_rabbitkw.man
@@ -24,7 +24,7 @@ The configuration parameters routing_key, host, port, exchange, vhost, user, and
 
 .TP
 .BR config
-name=<plugin_name> exchange=<exch> routing_key=<route> host=<host> port=<port> vhost=<vhost> user=<user> pwfile=<auth> [extraprops=<y/n> logmsg=<y/n> useserver=[y/n> timeout=<msec> retry=<sec>]
+name=<plugin_name> exchange=<exch> routing_key=<route> host=<host> port=<port> vhost=<vhost> user=<user> pwfile=<auth> [extraprops=<y/n> logmsg=<y/n> useserver=[y/n> heartbeat=<sec> timeout=<msec> retry=<sec>]
 .br
 These parameters are:
 .RS
@@ -65,6 +65,10 @@ The file <auth> contains the amqp user password in the format 'secretword=passwo
 retry=<sec>
 .br
 If amqp connection fails due to network or server issue, retry every <sec> seconds. Default is 60.
+.TP
+heartbeat=<sec>
+.br
+Heartbeat interval used to detect failed connections.
 .TP
 timeout=<millisec>
 .br
