--- a/ldms/scripts/examples/rabbitkwl2.1
+++ b/ldms/scripts/examples/rabbitkwl2.1
@@ -9,18 +9,18 @@ load name=store_rabbitkw
 # config name=store_rabbitkw useserver=y routing_key=ldms.kodiak host=localhost port=5672 exchange=amq.topic vhost=/ user=guest pwfile=${AUTHFILE} extraprops=y logmsg=n retry=3 timeout=2000
 config name=store_rabbitkw useserver=y routing_key=ldms.kodiak host=localhost port=5672 exchange=amq.topic vhost=/ user=guest pwfile=${AUTHFILE} extraprops=y logmsg=n
 
-strgp_add name=rabbit_meminfo plugin=store_rabbitkw schema=meminfo policy=meminfo container=bigiron
+strgp_add name=rabbit_meminfo plugin=store_rabbitkw schema=meminfo container=bigiron
 strgp_prdcr_add name=rabbit_meminfo regex=.*
 strgp_start name=rabbit_meminfo
 
-strgp_add name=rabbit_array_example plugin=store_rabbitkw schema=array_example policy=array_example container=curlingiron
+strgp_add name=rabbit_array_example plugin=store_rabbitkw schema=array_example container=curlingiron
 strgp_prdcr_add name=rabbit_array_example regex=.*
 strgp_start name=rabbit_array_example
 
-strgp_add name=rabbit_vmstat plugin=store_rabbitkw schema=vmstat policy=vmstat container=bigiron
+strgp_add name=rabbit_vmstat plugin=store_rabbitkw schema=vmstat container=bigiron
 strgp_prdcr_add name=rabbit_vmstat regex=.*
 strgp_start name=rabbit_vmstat
 
-strgp_add name=rabbit_procnetdev plugin=store_rabbitkw schema=procnetdev policy=procnetdev container=brandingiron
+strgp_add name=rabbit_procnetdev plugin=store_rabbitkw schema=procnetdev container=brandingiron
 strgp_prdcr_add name=rabbit_procnetdev regex=.*
 strgp_start name=rabbit_procnetdev
